--- a/profile.html
+++ b/profile.html
@@ -1,30 +1,60 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>khurma</title>
+    <title>Khurma.lzh - Terms of Service</title>
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/header.css">
 </head>
+
 <body class="bd">
     <header>
         <nav>
-            <div class="logo">Khurma.lzh</div>
+            <div class="logo">Khurma Talk</div>
             <ul>
                 <li><a href="index.html">Top</a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Khurma.lzh</a></li>
-                <li><a href="#" class="discord-btn">Discord</a></li>
+                <li><a href="profile.html">Developer</a></li>
+                <li><a href="tos.html">Terms of Service</a></li>
+                <li><a href="https://discord.gg/cZ7ZH4CGfg" class="discord-btn">Discord</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
+    <main class="main-content">
+            <section class="terms-of-service">
+                <h2>Khurma.lzh</h2>
 
-    
+                <h2 class="section-title">開発者について</h2>
+                <p>日本の18歳のトラックメーカーです。</p>
+                <p>個人開発者です。</p>
+                <p>趣味で作ってます。</p>
+                <ul>
+                    <li>Discord ID : Khurma.lzh</li>
+                    <p>なにかあったらどうぞ</p>
+                    <a class="discord-btn" href="https://discord.com/users/1166902757823877123">
+                        問い合わせ先</a>
 
+                </ul>
+
+                <h2 class="section-title">Sound Cloud</h2>
+                <ul>
+                    <p>First Release All me. Listen here:</p>
+                    <a href="https://on.soundcloud.com/5j8qJ2Yn5eJbRSBwEx" class="discord-btn">Listen here</a>
+                </ul>
+
+                <h2 class="section-title">Git Hub</h2>
+                <ul>
+                    <p>Khurma Crypto:</p>
+                    <a href="https://github.com/KPNLZH/Khurma-Crypto" class="discord-btn">Download Here</a>
+                </ul>
+            </section>
     </main>
+
+    <footer>
+        <p>&copy; 2025 khurma.lzh</p>
+    </footer>
 
 </body>
 
