--- a/index.html
+++ b/index.html
@@ -1,50 +1,46 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" class="bg">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>khurma</title>
+    <title>Khurma.lzh - BOT導入</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/header.css">
 </head>
+
 <body class="bd">
     <header>
         <nav>
-            <div class="logo">Khurma.lzh</div>
+            <div class="logo">Khurma Talk</div>
             <ul>
                 <li><a href="index.html">Top</a></li>
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Khurma.lzh</a></li>
-                <li><a href="#" class="discord-btn">Discord</a></li>
+                <li><a href="profile.html">Developer</a></li>
+                <li><a href="tos.html">Terms of Service</a></li>
+                <li><a href="https://discord.gg/cZ7ZH4CGfg" class="discord-btn">Discord</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-
+    <main class="main-content">
         <div class="hero">
-            <h1>Khurma.lzh</h1>
-            <p>far away from the sky...</p>
-            <p>refrain words and the tears</p>
-            <div class="buttons">
-                <a href="#" class="btn download">TEST</a>
-                <a href="#" class="btn store">TEST</a>
-            </div>
-        </div>
-    
-        <div class="content-wrapper">
-            <section class="server-status">
-                <h2>test</h2>
-                <p>現在の数: <span id="player-count">123456</span></p>
+            <section class="bot-invite"> 
+                <h1 class="invite-title">Khurma Talk</h1>
+
+
+                <p class="invite-description">Khurma Talkは、Discordサーバーでの会話をもっと楽しくするお手伝いをします。 </p>
+                <p>以下のボタンから、BOTをあなたのサーバーに簡単に追加できます。</p>
+
+
+                <div class="invite-buttons">
+                    <a href="https://discord.com/oauth2/authorize?client_id=1316009186165002290&scope=bot&permissions=8"
+                        class="btn install-btn download">ADD TO SERVER</a>
+                </div>
             </section>
         </div>
     </main>
-
+    <footer>
+        <p>&copy; 2025 khurma.lzh</p>
+    </footer>
 </body>
-<footer>
-    <p>&copy; 2025  khurma.lzh</p>
-</footer>
-
-
 </html>
